<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TabListViewFragment">


        <TextView
            android:id="@+id/textViewHidden"
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="Not a single sight near you ;/"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:typeface="serif"
            android:visibility="invisible" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

</FrameLayout>